# factors-dataroom

./: README.md  requirements.txt
.github/workflows/: generate-factsheets.yml  generate-notebooks.yml  render-multi-factor.yml
.internal/factor-analysis/: altair.json  carry_enhanced.json  instantaneous_momentum.json  instantaneous_volatility.json  margin_risk.json  mean_reversion.json  mean_reversion_enhanced.json  momentum.json  momentum_enhanced.json  open_interest_divergence.json  polaris.json  relative_illiquidity.json  retail_flow.json  supply_velocity.json
aperiodic-factors-client/: .env.example  .gitignore  README.md  pyproject.toml
aperiodic-factors-client/scripts/: run_endpoint.py
aperiodic-factors-client/src/aperiodic/: constants.py  decorators.py  price.py
aperiodic-factors-client/src/aperiodic/portfolio/: factors.py  historical_weights.py  live_weights.py  returns.py  risk.py  tickers.py  universe.py
aperiodic-factors-client/tests/: conftest.py  test_live_weights.py  test_portfolio_factors_historical.py  test_portfolio_factors_live.py  test_portfolio_historical_weights.py  test_portfolio_returns.py  test_portfolio_universe.py  test_price.py  test_risk.py  test_tickers.py
data/benchmarks/: btc-usd.json
data/factor-analysis/: altair.json  carry_enhanced.json  instantaneous_momentum.json  instantaneous_volatility.json  momentum.json  (+9 more)
notebooks/: 00_adaptive-portfolios.ipynb  00_factor_returns_correlation.ipynb  00_get_live_weights.ipynb  00_multi_factor_portfolio_construction.ipynb  00_replicate_portfolio_backtest.ipynb  factor_analysis_altair.ipynb  factor_analysis_carry_enhanced.ipynb  factor_analysis_instantaneous_momentum.ipynb  factor_analysis_margin_risk.ipynb  factor_analysis_mean_reversion.ipynb  factor_analysis_mean_reversion_enhanced.ipynb  factor_analysis_momentum.ipynb  factor_analysis_momentum_enhanced.ipynb  factor_analysis_open_interest_divergence.ipynb  factor_analysis_polaris.ipynb  factor_analysis_relative_illiquidity.ipynb  factor_analysis_retail_flow.ipynb  factor_analysis_supply_velocity.ipynb
scripts/: _common.py  clean_notebooks.py  export_data.py  factors_catalog.py  generate_factor_notebooks.py  generate_factsheets.py  redact_secrets.py
(+41 files in other folders)
